登陆功能的failureHandler

--- a/BudgetSystem/记录.md
+++ b/BudgetSystem/记录.md
@@ -10,3 +10,7 @@
 
 # 参考
 [基于 Spring Security 的前后端分离的权限控制系统](https://www.cnblogs.com/cjsblog/p/14904861.html)
+
+[什么是 JWT -- JSON WEB TOKEN](https://www.jianshu.com/p/576dbf44b2ae)
+
+https://gitee.com/micai-code/springboot-springsecurity-jwt-demo?_from=gitee_search
