完成登陆接口

--- a/BudgetSystem/记录.md
+++ b/BudgetSystem/记录.md
@@ -13,4 +13,11 @@
 
 [什么是 JWT -- JSON WEB TOKEN](https://www.jianshu.com/p/576dbf44b2ae)
 
-https://gitee.com/micai-code/springboot-springsecurity-jwt-demo?_from=gitee_search
+/login
+- 登陆成功
+  - code=200,message="login success"
+- 登陆失败
+  - 用户不存在 code=204
+  - 密码错误 code=206
+  - 用户被锁 code=205
+  - 系统错误 code=500
