登陆后跳转&查询权限

--- a/BudgetSystem/记录.md
+++ b/BudgetSystem/记录.md
@@ -12,6 +12,11 @@
 [基于 Spring Security 的前后端分离的权限控制系统](https://www.cnblogs.com/cjsblog/p/14904861.html)
 
 [什么是 JWT -- JSON WEB TOKEN](https://www.jianshu.com/p/576dbf44b2ae)
+[登陆成功后重定向](https://blog.csdn.net/weixin_34128839/article/details/91899834)
+[自定义404](https://www.cnblogs.com/54chensongxia/p/14007696.html)
+[自定义404!!!!!](https://segmentfault.com/a/1190000025128752)
+
+[SpringBoot Whitelabel Error Page](https://www.jianshu.com/p/b06584591086)
 
 /login
 - 登陆成功
