文件上传接口

--- a/BudgetSystem/记录.md
+++ b/BudgetSystem/记录.md
@@ -5,7 +5,9 @@
 - 角色和菜单 是多对多的关系：
 
 
-将数据表之间的映射关系，从service层完成，dao层只进行单表查询
+将数据表之间的映射关系，从service层完成，dao层只进行单表查询\
+
+! 重启服务器后，前端需要重新登录，可能与服务器内存重置有关
 
 
 # 参考
